[package]
name = "radar"
version = "0.1.10"
edition = "2021"

[dependencies]
bytemuck = {version = "1.13.1", features = ["derive", "zeroable_maybe_uninit"]}
byteorder = "1.4.3"
chrono = "0.4.26"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.97"
serialport = "4.2.1"

[profile.release]
strip = true
lto = true
codegen-units = 1